:+1: Fix a bug causing input changes not working on mobile devices,

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,7 +6,6 @@
 @import "content";
 @layer base {
   body {
-    line-height: 1.5;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     font-family: "Epilogue", "Monserrat", sans-serif;
     font-size: 16px;
@@ -28,7 +27,7 @@ a {
 }
 .grid-layout {
   display: grid;
-  grid-auto-columns: 235px;
+  grid-auto-columns: 285px;
   gap: 20px;
   -ms-overflow-style: none;
   scrollbar-width: none;
@@ -105,5 +104,15 @@ a {
     top: 0;
     background-color: white;
     z-index: 10;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .Toastify__toast-container--top-right,
+  .Toastify__toast-container {
+    top: 20px !important;
+    right: 20px !important;
+    width: 380px !important;
+    left: unset !important;
   }
 }
